services/odds-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odds-service
spec:
  selector:
    app: odds-service
  ports:
    - name: http
      port: 80
      targetPort: http
